[gd_scene load_steps=13 format=3 uid="uid://cmbonu0v146nc"]

[ext_resource type="Script" path="res://scripts/InterfaceManager.gd" id="1_1u74w"]
[ext_resource type="Theme" uid="uid://dkipchea646ox" path="res://resources/DefaultTheme.tres" id="2_iwdsn"]
[ext_resource type="Texture2D" uid="uid://dy7rxp7elc5ny" path="res://resources/sand-32.png" id="3_br2wc"]
[ext_resource type="Texture2D" uid="uid://b7ns77m4ueyg8" path="res://resources/factory.png" id="4_6yk4b"]
[ext_resource type="Texture2D" uid="uid://bxeq6n0odpdc6" path="res://resources/Tileset.png" id="5_yh5tu"]
[ext_resource type="Texture2D" uid="uid://ds7dp2b62cs00" path="res://resources/rocket1.png" id="6_ypxny"]

[sub_resource type="InputEventKey" id="InputEventKey_ge17h"]
device = -1
physical_keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_abmxe"]
events = [SubResource("InputEventKey_ge17h")]

[sub_resource type="InputEventKey" id="InputEventKey_p2jsc"]
device = -1
physical_keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_y21ef"]
events = [SubResource("InputEventKey_p2jsc")]

[sub_resource type="InputEventKey" id="InputEventKey_d4im3"]
device = -1
physical_keycode = 51
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_44b6p"]
events = [SubResource("InputEventKey_d4im3")]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_1u74w")

[node name="Panel" type="Panel" parent="."]
offset_left = 12.0
offset_top = 12.0
offset_right = 232.0
offset_bottom = 263.0

[node name="SandLabelContainer" type="CenterContainer" parent="Panel"]
layout_mode = 0
offset_left = 40.0
offset_top = 8.0
offset_right = 220.0
offset_bottom = 48.0
tooltip_text = "Available sand"
theme = ExtResource("2_iwdsn")

[node name="SandLabel" type="Label" parent="Panel/SandLabelContainer"]
layout_mode = 2
theme = ExtResource("2_iwdsn")
text = "0"

[node name="SandIcon" type="Sprite2D" parent="Panel/SandLabelContainer/SandLabel"]
position = Vector2(-43, 0)
texture = ExtResource("3_br2wc")
centered = false
region_rect = Rect2(0, 0, 16, 16)

[node name="PowerLabelContainer" type="CenterContainer" parent="Panel"]
layout_mode = 2
offset_left = 123.0
offset_top = 55.0
offset_right = 137.0
offset_bottom = 87.0
tooltip_text = "Available sand"
theme = ExtResource("2_iwdsn")

[node name="PowerLabel" type="Label" parent="Panel/PowerLabelContainer"]
layout_mode = 2
theme = ExtResource("2_iwdsn")
text = "0"

[node name="SandIcon" type="Sprite2D" parent="Panel/PowerLabelContainer/PowerLabel"]
position = Vector2(-43, 0)
texture = ExtResource("3_br2wc")
centered = false
region_rect = Rect2(0, 0, 16, 16)

[node name="BuyDrillButton" type="Button" parent="Panel"]
layout_mode = 2
offset_left = 10.0
offset_top = 98.0
offset_right = 210.0
offset_bottom = 138.0
tooltip_text = "Build a drill [1]"
focus_mode = 0
theme = ExtResource("2_iwdsn")
shortcut = SubResource("Shortcut_abmxe")
shortcut_in_tooltip = false
text = "100"

[node name="DrillIcon" type="Sprite2D" parent="Panel/BuyDrillButton"]
modulate = Color(1, 0.698039, 0.164706, 1)
position = Vector2(7, -29)
texture = ExtResource("4_6yk4b")
centered = false
region_rect = Rect2(0, 0, 16, 16)

[node name="SandIcon" type="Sprite2D" parent="Panel/BuyDrillButton"]
position = Vector2(130, 12)
texture = ExtResource("5_yh5tu")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="BuyFactoryButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 148.0
offset_right = 210.0
offset_bottom = 188.0
tooltip_text = "Build a factory [2]"
focus_mode = 0
theme = ExtResource("2_iwdsn")
shortcut = SubResource("Shortcut_y21ef")
shortcut_in_tooltip = false
text = "100"

[node name="FactoryIcon" type="Sprite2D" parent="Panel/BuyFactoryButton"]
position = Vector2(7, -29)
texture = ExtResource("4_6yk4b")
centered = false
region_rect = Rect2(0, 0, 16, 16)

[node name="SandIcon" type="Sprite2D" parent="Panel/BuyFactoryButton"]
position = Vector2(130, 12)
texture = ExtResource("5_yh5tu")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="BuyRocketButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 198.0
offset_right = 210.0
offset_bottom = 238.0
tooltip_text = "Build the rocket [3]"
focus_mode = 0
theme = ExtResource("2_iwdsn")
shortcut = SubResource("Shortcut_44b6p")
shortcut_in_tooltip = false
text = "100"
icon_alignment = 2

[node name="RocketIcon" type="Sprite2D" parent="Panel/BuyRocketButton"]
position = Vector2(11, -14)
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_ypxny")
centered = false
region_rect = Rect2(0, 0, 16, 16)

[node name="SandIcon" type="Sprite2D" parent="Panel/BuyRocketButton"]
position = Vector2(130, 12)
texture = ExtResource("5_yh5tu")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)
